# nnnhl2

./: Cargo.toml  README.md  justfile
css/: layout.css  reset.css  schedule.css  standings.css  styles.css
js/: spoilers.js  time2local.js
src/: api_client.rs  main.rs
src/api_types/: common.rs  game.rs  mod.rs  schedule.rs  standings.rs
