[package]
name = "nnnhl2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
maud = "*"
rouille = { version = "3.6.2", features = ["rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
ureq = { version = "3.0.8", features = ["json"] }

[profile.release]
strip = true
lto = true
panic = "abort"
